wip ui work and stats fixes